--- a/src/main/resources/org/projectx/lib/javafx/scene/control/skin/caspian/caspian.css
+++ b/src/main/resources/org/projectx/lib/javafx/scene/control/skin/caspian/caspian.css
@@ -25,7 +25,16 @@
 .local-date-foo { 
     -fx-skin: "org.projectx.lib.javafx.scene.control.time.calendar.skin.LocalDateFooSkin";
 }
+.local-date-foo .toggle-button{
+    -fx-background-color: green; /*transparent;*/
+    -fx-border-color: black;
+}
 
+/* TODO: doesn't work!? */
+.local-date-foo .day-of-week{
+    -fx-font-weight: bold;
+    -fx-color: red;
+}
 /**************************************************************************************************
  *                                                                                                *
  * LocalDatePicker                                                                                *
@@ -45,4 +54,15 @@
 .year-month-picker { 
     -fx-skin: "org.projectx.lib.javafx.scene.control.time.calendar.skin.YearMonthPickerSkin";
 }
+
+
+.year-month-picker .button {
+    -fx-background-color: transparent;
+}
+
+.year-month-picker .button:hover {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
+    /* -fx-color: -fx-hover-base; * already defined in default css?*/
+}
+
 
