- Ensemble fixes - LocalDateButton -> LocalDateToggleButton - style fixes - skin fixes - Javadoc - Small API fixes

--- a/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane.fxml
+++ b/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane.fxml
@@ -10,19 +10,32 @@
 
 <fx:root type="DockablePane" xmlns:fx="http://javafx.com/fxml" title="%DateTimeEditorPane.title">
     <GridPane>
-        <Label text="LocalDateButton:" labelFor="$localDateButton" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <LocalDateButton GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="localDateButton"/>
+        <Label text="LocalDateToggleButton:" labelFor="$localDateToggleButton" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <LocalDateToggleButton GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="localDateToggleButton"/>
         <Label text="LocalDateField:" labelFor="$localDateField" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
         <LocalDateField GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="localDateField"/>
         <Label text="LocalDateFoo:" labelFor="$localDateFoo" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-        <LocalDateFoo GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="localDateFoo"/>
-        <Label text="LocalDatePicker:" labelFor="$localDatePicker" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-        <LocalDatePicker GridPane.rowIndex="3" GridPane.columnIndex="1" fx:id="localDatePicker"/>
+        <AnchorPane GridPane.rowIndex="2" GridPane.columnIndex="1">
+            <LocalDateFoo  fx:id="localDateFoo"/>
+        </AnchorPane>
+        <Label text="LocalDatePicker:" labelFor="$localDatePicker1" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+        <AnchorPane GridPane.rowIndex="3" GridPane.columnIndex="1">
+            <LocalDatePicker  fx:id="localDatePicker1"/>
+        </AnchorPane>
+        <AnchorPane GridPane.rowIndex="3" GridPane.columnIndex="2">
+            <LocalDatePicker previousWeeks="2" nextWeeks="1" showWeeks="false" showYearScrollButton="false" fx:id="localDatePicker2"/>
+        </AnchorPane>
         <Label text="MonthOfYearComboBox:" labelFor="$monthOfYearComboBox" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-        <MonthOfYearComboBox GridPane.rowIndex="4" GridPane.columnIndex="1" fx:id="monthOfYearComboBox"/>
+        <AnchorPane GridPane.rowIndex="4" GridPane.columnIndex="1">
+            <MonthOfYearComboBox  fx:id="monthOfYearComboBox"/>
+        </AnchorPane>
         <Label text="YearField:" labelFor="$yearField" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-        <YearField GridPane.rowIndex="5" GridPane.columnIndex="1" fx:id="yearField"/>
+        <AnchorPane GridPane.rowIndex="5" GridPane.columnIndex="1">
+            <YearField  fx:id="yearField"/>
+        </AnchorPane>
         <Label text="YearMonthPicker:" labelFor="$yearMonthPicker" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-        <YearMonthPicker GridPane.rowIndex="6" GridPane.columnIndex="1" fx:id="yearMonthPicker"/>
+        <AnchorPane GridPane.rowIndex="6" GridPane.columnIndex="1">
+            <YearMonthPicker  fx:id="yearMonthPicker"/>
+        </AnchorPane>
     </GridPane>
 </fx:root>
