--- a/drombler-commons-fx-time/src/main/resources/org/drombler/commons/fx/scene/control/time/calendar/impl/skin/caspian/caspian.css
+++ b/drombler-commons-fx-time/src/main/resources/org/drombler/commons/fx/scene/control/time/calendar/impl/skin/caspian/caspian.css
@@ -10,7 +10,7 @@
  * Copyright 2012 Drombler.org. All Rights Reserved.
  *
  * Contributor(s): .
- */
+*/
 /* 
     Document   : caspian
     Created on : 17.02.2012, 17:49:21
@@ -27,11 +27,40 @@
 
 .local-date-field { 
     -fx-skin: "org.drombler.commons.fx.scene.control.time.calendar.impl.skin.LocalDateFieldSkin";
+/*    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;*/
 }
 
-.local-date-field .popup-control{ 
-    -fx-background-color: yellow;
-}
+/*.local-date-field .popup-control{ 
+    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;
+}*/
+
+/*.local-date-field .popup{ 
+    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;
+}*/
+
+/*.local-date-field .local-date-picker{ 
+    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;
+}*/
+
+/*.local-date-field-popup{
+    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;
+}*/
+
+/*.local-date-field .local-date-field-popup{
+    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;
+}*/
 /**************************************************************************************************
  *                                                                                                *
  * LocalDateFoo                                                                                   *
@@ -40,17 +69,44 @@
 
 .local-date-foo { 
     -fx-skin: "org.drombler.commons.fx.scene.control.time.calendar.impl.skin.LocalDateFooSkin";
+    -fx-background-color: white;
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    /*    -fx-fill: black;*/
 }
 .local-date-foo .toggle-button{
-    -fx-background-color: aliceblue;
+    -fx-background-color: gray, white;/*transparent;*/
+    -fx-background-insets: 0, 1;
+    -fx-background-radius: 0, 0;
+    /*-fx-background-color: aliceblue;*/
     /*-fx-background-color: green;
    -fx-border-color: black;*/
 }
 
-/* TODO: doesn't work!? */
+.local-date-foo .toggle-button:selected{
+    -fx-background-color: gray, darkgray;/*transparent;*/
+    -fx-background-insets: 0, 1;
+    -fx-background-radius: 0, 0;
+    /*-fx-background-color: aliceblue;*/
+    /*-fx-background-color: green;
+   -fx-border-color: black;*/
+}
+
+.local-date-foo .day-out-of-year-month{
+    -fx-text-fill: gray;
+}
+
+
+
+.local-date-foo .week-label{
+    -fx-background-color: lightgray;
+}
+
 .local-date-foo .day-of-week{
     -fx-font-weight: bold;
-    -fx-text-fill: red;
+    /*-fx-text-fill: red;*/
+    /*    -fx-background-color: red, blue;
+        -fx-background-insets: 0, 1;*/
 }
 /**************************************************************************************************
  *                                                                                                *
@@ -60,9 +116,18 @@
 
 .local-date-picker { 
     -fx-skin: "org.drombler.commons.fx.scene.control.time.calendar.impl.skin.LocalDatePickerSkin";
+/*    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;*/
     /*-fx-background-color: -fx-background;*/
-    -fx-background-color: yellow;
+    /*-fx-background-color: yellow;*/
 }
+
+/*.date-picker-popup {
+    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;
+}*/
 
 /**************************************************************************************************
  *                                                                                                *
@@ -76,6 +141,9 @@
     -fx-background-insets: 10, 20;
     -fx-border-color: black;*/
     -fx-font-size: 1.166667em; /* 14pt - 2 more than the default font */
+/*    -fx-background-color: black;
+    -fx-background-insets: 0;
+    -fx-fill: black;*/
 
 }
 
