- Renamed: LocalDateFoo -> LocalDateFixedYearMonthChooser

--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane.fxml
@@ -14,9 +14,9 @@
         <LocalDateToggleButton GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="localDateToggleButton"/>
         <Label text="LocalDateField:" labelFor="$localDateField" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
         <LocalDateField GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="localDateField"/>
-        <Label text="LocalDateFoo:" labelFor="$localDateFoo" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+        <Label text="LocalDateFixedYearMonthChooser" labelFor="$localDateFixedYearMonthChooser" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
         <AnchorPane GridPane.rowIndex="2" GridPane.columnIndex="1">
-            <LocalDateFoo  fx:id="localDateFoo"/>
+            <LocalDateFixedYearMonthChooser  fx:id="$localDateFixedYearMonthChooser"/>
         </AnchorPane>
         <Label text="LocalDatePicker:" labelFor="$localDatePicker1" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
         <AnchorPane GridPane.rowIndex="3" GridPane.columnIndex="1">
