--- a/drombler-commons-fx/drombler-commons-fx-time/src/main/resources/org/drombler/commons/fx/scene/control/time/calendar/impl/skin/caspian/caspian.css
+++ b/drombler-commons-fx/drombler-commons-fx-time/src/main/resources/org/drombler/commons/fx/scene/control/time/calendar/impl/skin/caspian/caspian.css
@@ -25,8 +25,8 @@
  *                                                                                                *
  **************************************************************************************************/
 
-.local-date-field { 
-    -fx-skin: "org.drombler.commons.fx.scene.control.time.calendar.impl.skin.LocalDateFieldSkin";
+.local-date-picker { 
+    -fx-skin: "org.drombler.commons.fx.scene.control.time.calendar.impl.skin.LocalDatePickerSkin";
 /*    -fx-background-color: black;
     -fx-background-insets: 0;
     -fx-fill: black;*/
