--- a/drombler-commons-fx/drombler-commons-fx-time/src/main/resources/org/drombler/commons/fx/scene/control/time/calendar/impl/skin/caspian/caspian.css
+++ b/drombler-commons-fx/drombler-commons-fx-time/src/main/resources/org/drombler/commons/fx/scene/control/time/calendar/impl/skin/caspian/caspian.css
@@ -150,6 +150,8 @@
 
 .year-month-spinner .button {
     -fx-background-color: transparent;
+    -fx-padding: 0.166667em 0.166667em 0.166667em 0.166667em; /* 2 2 2 2 */
+/*    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em;  2 10 3 10 */
     /*-fx-background-color: aqua;*/ 
     /*-fx-border-color: black;*/
 }
