- API fixes - Ensemble fixes

--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane.fxml
@@ -45,7 +45,7 @@
                 <GridPane.margin>
                     <Insets bottom="100.0" left="0.0" right="0.0" top="0.0" />
                 </GridPane.margin>
-                <LocalDateChooser previousWeeks="2" nextWeeks="1" showWeekOfYear="false" showYearScrollButton="false" fx:id="localDateChooser2"/>
+                <LocalDateChooser previousWeeks="2" nextWeeks="1" showingWeekOfYear="false" showingYearScrollButton="false" fx:id="localDateChooser2"/>
             </AnchorPane>
             <Label text="MonthOfYearComboBox:" labelFor="$monthOfYearComboBox" GridPane.rowIndex="4" GridPane.columnIndex="0">
                 <GridPane.margin>
