- Renamed packages: removed "calendar" from the package names to align the Drombler Commons package names with the new Date & Time package names in Java SE 8 - package imports clean-up

--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane2.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/src/main/resources/org/drombler/commons/fx/ensemble/time/impl/DateTimeEditorPane2.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import org.drombler.fx.core.docking.*?>
-<?import org.drombler.commons.fx.scene.control.time.calendar.*?>
+<?import org.drombler.commons.fx.scene.control.time.*?>
 
 <fx:root type="DockablePane" xmlns:fx="http://javafx.com/fxml" title="%DateTimeEditorPane.title">
     <BorderPane>
